fixed button overlap

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -420,6 +420,7 @@ article{
       box-shadow: #ccc200 4px 7px 9px 0px;
       font: normal normal bold 10px;
       text-decoration: none;
+      margin-bottom: 20px;
   }
   .button:hover,
   .button:focus,
